# serializer version: 1
# name: test_host_recomputes_the_verdict
  dict({
    'exit_code': 2,
    'stderr': '',
    'stdout': '''
      [<LOG_TIME>] INFO     Resolved OCI_RUNNER to: /usr/bin/docker
                   INFO     ASH installation appears to be alongide the repository contents, building with LOCAL source
      Running ASH scan using built image...
      
      === ASH Scan Completed in <DURATION>: Next Steps ===
      View detailed findings...
        - SARIF: '<TMP>/out/reports/ash.sarif'
        - JUnit: '<TMP>/out/reports/ash.junit.xml'
        - ASH aggregated results JSON available at: '<TMP>/out/ash_aggregated_results.json'
      
      === Actionable findings detected! ===
      To investigate...
        1. Open one of the summary reports for a user-friendly table of the findings:
          - HTML report of all findings: '<TMP>/out/reports/ash.html'
          - Markdown summary: '<TMP>/out/reports/ash.summary.md'
          - Text summary: '<TMP>/out/reports/ash.summary.txt'
        2. Use ash report to view a short text summary of the scan in your terminal
        3. Use ash inspect findings to explore the findings interactively
        4. Review scanner-specific reports and outputs in the '<TMP>/out/scanners' directory
      
      === ASH Exit Codes ===
        0: Success - No actionable findings or not configured to fail on findings
        1: Error during execution
        2: Actionable findings detected when configured with `fail_on_findings: true`. Default is True. Current value: True
      ERROR (2) Exiting due to 6 actionable findings found in ASH scan
  
    ''',
  })
# ---
# name: test_non_verdict_status[125-runner-failed-before-entrypoint]
  dict({
    'exit_code': 125,
    'stderr': '''
      container exited with 125
  
    ''',
    'stdout': '''
      [<LOG_TIME>] INFO     Resolved OCI_RUNNER to: /usr/bin/docker
                   INFO     ASH installation appears to be alongide the repository contents, building with LOCAL source
      Running ASH scan using built image...
                   ERROR    Container execution failed with code 125
                   ERROR    Container stderr:
                            container exited with 125
      
      
      Container Error Output:
      container exited with 125
      
                   ERROR    The container exited with 125, which is not a status an ASH scan can return (0, 1, 2 are the verdicts it reaches from a results file). The scan did not run to completion, so any report in the output directory is incomplete and is not being read back.
  
    ''',
  })
# ---
# name: test_non_verdict_status[137-killed]
  dict({
    'exit_code': 137,
    'stderr': '''
      container exited with 137
  
    ''',
    'stdout': '''
      [<LOG_TIME>] INFO     Resolved OCI_RUNNER to: /usr/bin/docker
                   INFO     ASH installation appears to be alongide the repository contents, building with LOCAL source
      Running ASH scan using built image...
                   ERROR    Container execution failed with code 137
                   ERROR    Container stderr:
                            container exited with 137
      
      
      Container Error Output:
      container exited with 137
      
                   ERROR    The container exited with 137, which is not a status an ASH scan can return (0, 1, 2 are the verdicts it reaches from a results file). The scan did not run to completion, so any report in the output directory is incomplete and is not being read back.
  
    ''',
  })
# ---
# name: test_non_verdict_status[3-invalid-config]
  dict({
    'exit_code': 3,
    'stderr': '''
      container exited with 3
  
    ''',
    'stdout': '''
      [<LOG_TIME>] INFO     Resolved OCI_RUNNER to: /usr/bin/docker
                   INFO     ASH installation appears to be alongide the repository contents, building with LOCAL source
      Running ASH scan using built image...
                   ERROR    Container execution failed with code 3
                   ERROR    Container stderr:
                            container exited with 3
      
      
      Container Error Output:
      container exited with 3
      
                   ERROR    The container exited with 3 (invalid config), which means nothing was scanned. Only 0, 1, 2 are verdicts ASH reaches from a results file, so there is nothing in the output directory to read back.
  
    ''',
  })
# ---
# name: test_non_verdict_status[4-workspace-error]
  dict({
    'exit_code': 4,
    'stderr': '''
      container exited with 4
  
    ''',
    'stdout': '''
      [<LOG_TIME>] INFO     Resolved OCI_RUNNER to: /usr/bin/docker
                   INFO     ASH installation appears to be alongide the repository contents, building with LOCAL source
      Running ASH scan using built image...
                   ERROR    Container execution failed with code 4
                   ERROR    Container stderr:
                            container exited with 4
      
      
      Container Error Output:
      container exited with 4
      
                   ERROR    The container exited with 4 (workspace definition or policy error), which means nothing was scanned. Only 0, 1, 2 are verdicts ASH reaches from a results file, so there is nothing in the output directory to read back.
  
    ''',
  })
# ---
# name: test_success_status_without_results
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      [<LOG_TIME>] INFO     Resolved OCI_RUNNER to: /usr/bin/docker
                   INFO     ASH installation appears to be alongide the repository contents, building with LOCAL source
      Running ASH scan using built image...
      container wrote nothing
                   ERROR    Results file not found at <TMP>/out/ash_aggregated_results.json
  
    ''',
  })
# ---
# name: test_unparseable_results
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      [<LOG_TIME>] INFO     Resolved OCI_RUNNER to: /usr/bin/docker
                   INFO     ASH installation appears to be alongide the repository contents, building with LOCAL source
      Running ASH scan using built image...
                   ERROR    Failed to parse results file: 1 validation error for AshAggregatedResults
                              Invalid JSON: key must be a string at line 1 column 2
                                For further information visit https://errors.pydantic.dev/<PYDANTIC_VERSION>/v/json_invalid
  
    ''',
  })
# ---
# name: test_verdict_status_with_results[0]
  dict({
    'exit_code': 1,
    'stderr': '''
      Scan incomplete: cfn-nag (ERROR), npm-audit (MISSING)
  
    ''',
    'stdout': '''
      [<LOG_TIME>] INFO     Resolved OCI_RUNNER to: /usr/bin/docker
                   INFO     ASH installation appears to be alongide the repository contents, building with LOCAL source
      Running ASH scan using built image...
      
      === ASH Scan Completed in <DURATION>: Next Steps ===
      View detailed findings...
        - SARIF: '<TMP>/out/reports/ash.sarif'
        - JUnit: '<TMP>/out/reports/ash.junit.xml'
        - ASH aggregated results JSON available at: '<TMP>/out/ash_aggregated_results.json'
      
      === Actionable findings detected! ===
      To investigate...
        1. Open one of the summary reports for a user-friendly table of the findings:
          - HTML report of all findings: '<TMP>/out/reports/ash.html'
          - Markdown summary: '<TMP>/out/reports/ash.summary.md'
          - Text summary: '<TMP>/out/reports/ash.summary.txt'
        2. Use ash report to view a short text summary of the scan in your terminal
        3. Use ash inspect findings to explore the findings interactively
        4. Review scanner-specific reports and outputs in the '<TMP>/out/scanners' directory
      
      ERROR (1) Exiting because the scan was incomplete: 2 selected scanner(s) did not evaluate everything they were given
        cfn-nag: ERROR
        npm-audit: MISSING
      ERROR means the scanner ran and failed; MISSING means its dependencies were unavailable; a target count means the scanner ran but could not read that many of its inputs. Install the missing tools, fix or exclude the unreadable targets, exclude the scanners with --exclude-scanners, or drop --fail-on-incomplete-scanners to accept a partial scan.
  
    ''',
  })
# ---
# name: test_verdict_status_with_results[1]
  dict({
    'exit_code': 1,
    'stderr': '''
      Scan incomplete: cfn-nag (ERROR), npm-audit (MISSING)
  
    ''',
    'stdout': '''
      [<LOG_TIME>] INFO     Resolved OCI_RUNNER to: /usr/bin/docker
                   INFO     ASH installation appears to be alongide the repository contents, building with LOCAL source
      Running ASH scan using built image...
                   ERROR    Container execution failed with code 1
      
      === ASH Scan Completed in <DURATION>: Next Steps ===
      View detailed findings...
        - SARIF: '<TMP>/out/reports/ash.sarif'
        - JUnit: '<TMP>/out/reports/ash.junit.xml'
        - ASH aggregated results JSON available at: '<TMP>/out/ash_aggregated_results.json'
      
      === Actionable findings detected! ===
      To investigate...
        1. Open one of the summary reports for a user-friendly table of the findings:
          - HTML report of all findings: '<TMP>/out/reports/ash.html'
          - Markdown summary: '<TMP>/out/reports/ash.summary.md'
          - Text summary: '<TMP>/out/reports/ash.summary.txt'
        2. Use ash report to view a short text summary of the scan in your terminal
        3. Use ash inspect findings to explore the findings interactively
        4. Review scanner-specific reports and outputs in the '<TMP>/out/scanners' directory
      
      ERROR (1) Exiting because the scan was incomplete: 2 selected scanner(s) did not evaluate everything they were given
        cfn-nag: ERROR
        npm-audit: MISSING
      ERROR means the scanner ran and failed; MISSING means its dependencies were unavailable; a target count means the scanner ran but could not read that many of its inputs. Install the missing tools, fix or exclude the unreadable targets, exclude the scanners with --exclude-scanners, or drop --fail-on-incomplete-scanners to accept a partial scan.
  
    ''',
  })
# ---
# name: test_verdict_status_with_results[2]
  dict({
    'exit_code': 1,
    'stderr': '''
      Scan incomplete: cfn-nag (ERROR), npm-audit (MISSING)
  
    ''',
    'stdout': '''
      [<LOG_TIME>] INFO     Resolved OCI_RUNNER to: /usr/bin/docker
                   INFO     ASH installation appears to be alongide the repository contents, building with LOCAL source
      Running ASH scan using built image...
                   ERROR    Container execution failed with code 2
      
      === ASH Scan Completed in <DURATION>: Next Steps ===
      View detailed findings...
        - SARIF: '<TMP>/out/reports/ash.sarif'
        - JUnit: '<TMP>/out/reports/ash.junit.xml'
        - ASH aggregated results JSON available at: '<TMP>/out/ash_aggregated_results.json'
      
      === Actionable findings detected! ===
      To investigate...
        1. Open one of the summary reports for a user-friendly table of the findings:
          - HTML report of all findings: '<TMP>/out/reports/ash.html'
          - Markdown summary: '<TMP>/out/reports/ash.summary.md'
          - Text summary: '<TMP>/out/reports/ash.summary.txt'
        2. Use ash report to view a short text summary of the scan in your terminal
        3. Use ash inspect findings to explore the findings interactively
        4. Review scanner-specific reports and outputs in the '<TMP>/out/scanners' directory
      
      ERROR (1) Exiting because the scan was incomplete: 2 selected scanner(s) did not evaluate everything they were given
        cfn-nag: ERROR
        npm-audit: MISSING
      ERROR means the scanner ran and failed; MISSING means its dependencies were unavailable; a target count means the scanner ran but could not read that many of its inputs. Install the missing tools, fix or exclude the unreadable targets, exclude the scanners with --exclude-scanners, or drop --fail-on-incomplete-scanners to accept a partial scan.
  
    ''',
  })
# ---
